<resources>
    <string name="app_name">车同轨</string>
    <string name="title_home">首页</string>
    <string name="title_msg">消息</string>
    <string name="title_work">工作</string>
    <string name="title_transaction">交易</string>
    <string name="title_my">我的</string>
    <string name="jr">车同轨金融</string>
    <string name="mybusiness">我的企业</string>
    <string name="myteam">我的团队</string>
    <string name="mycustomer">客户管理</string>
    <string name="business">商机</string>
    <string name="queryrecord">查询记录</string>
    <string name="attentionnotes">关注记录</string>
    <string name="invitation">邀请</string>
    <string name="setting">设置</string>
    <string name="createenterprise">创建企业</string>
    <string name="Applicationaccession">申请加入</string>
    <string name="Determine">确定</string>
    <string name="Industryattribute">行业属性</string>
    <string name="Enterprisename">企业名称</string>
    <string name="Pleasename">请填写企业名称</string>
    <string name="address">地址</string>
    <string name="Detailedaddress">详细地址</string>
    <string name="email">企业邮箱</string>
    <string name="Personnelscale">人员规模</string>
    <string name="Enterprisewebsite">企业网址</string>
    <string name="Enterprisephone">企业电话</string>
    <string name="Companyprofile">企业简介</string>
    <string name="selectaddress">请选择地址</string>
    <string name="EDetailedaddress">请填写企业详细地址</string>
    <string name="Fillinmailbox">请填写企业邮箱</string>
    <string name="Pleasestaffsize">请填写人员规模</string>
    <string name="intheenterprisewebsite">请填写企业网址</string>
    <string name="Fillphone">请填写企业电话</string>
    <string name="Fillprofile">请填写企业简介</string>
    <string name="Pleasedealer">请填写行业属性</string>
    <string name="companyScale">企业规模</string>
    <string name="companyScalestr">请填写企业规模</string>
    <string name="Headportrait">头像</string>
    <string name="save">保存</string>
    <string name="Confirmmodification">确认修改</string>
    <string name="Nickname">昵称</string>
    <string name="Externalposition">对外职位</string>
    <string name="Expertise">专长特长</string>
    <string name="Personalauthentication">个人认证</string>
    <string name="Realname">真实姓名</string>
    <string name="IDnumber">身份证号</string>
    <string name="UploadIDcardpicture">上传身份证图片</string>
    <string name="Selectivegrouping">选择分组</string>
    <string name="Distributor">经销商</string>
    <string name="RepairDepot">修理厂</string>
    <string name="Manufacturer">制造商</string>
    <string name="logistics">物流</string>
    <string name="Insurancecompany">保险公司</string>
    <string name="Cardemolitionplant">拆车厂</string>
    <string name="Usergrouping">用户分组</string>
    <string name="Defaultgrouping">默认分组</string>
    <string name="edit">编辑</string>
    <string name="close">关闭</string>
    <string name="delete">删除</string>
    <string name="Tips">小提示左滑可删除和编辑</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="ChangePassword">修改密码</string>
    <string name="Receivingaddresssetting">收货地址</string>
    <string name="Helpandfeedback">帮助与反馈</string>
    <string name="about">关于车同轨</string>
    <string name="addaddress">添加收货地址</string>
    <string name="text">直则场展全压切公青类六状带长龙办每研意最走称性阶方红五理军往式点术查部打值集领学易参如持问圆感个布白院门状示。

只应便门情众叫与满界由育养却军设里养毛民最书毛提油接带去回线有主她么信型界大马及将飞组为研铁统总三众速部安习少越场位同还完。属思龙战社金往拉位新导素派目山矿按到记号起目你其还斗包还员省争员音许等备切料干个争参与号机区她律历边联满半林研究去走红制历本军存。

关次识基发展容已就说开关社引识离商王期产达统物江积质养火们况相展建技起目三外称火象还权代中易越那论过空听点业次约西直离名便具片水里支但反。光周八体声展引能用划易书开内光效它者收器红府群拉道眼林管组第世也从道月眼表同确把养行先半图。

正边化就究毛达又身清根治组达气速然部话可世区此最当称共水林风动采数度内想亲。结低变青解习放为点布别选头看适声斯亲素却装车线场声无真江直回斯开识阶广调表转近号周积复他养。直则场展全压切公青类六状带长龙办每研意最走称性阶方红五理军往式点术查部打值集领学易参如持问圆感个布白院门状示。

只应便门情众叫与满界由育养却军设里养毛民最书毛提油接带去回线有主她么信型界大马及将飞组为研铁统总三众速部安习少越场位同还完。属思龙战社金往拉位新导素派目山矿按到记号起目你其还斗包还员省争员音许等备切料干个争参与号机区她律历边联满半林研究去走红制历本军存。

关次识基发展容已就说开关社引识离商王期产达统物江积质养火们况相展建技起目三外称火象还权代中易越那论过空听点业次约西直离名便具片水里支但反。光周八体声展引能用划易书开内光效它者收器红府群拉道眼林管组第世也从道月眼表同确把养行先半图。

正边化就究毛达又身清根治组达气速然部话可世区此最当称共水林风动采数度内想亲。结低变青解习放为点布别选头看适声斯亲素却装车线场声无真江直回斯开识阶广调表转近号周积复他养。</string>
    <string name="applicationnotice">申请通知</string>
    <string name="Invitestaff">邀请员工</string>
    <string name="Managementteam">管理团队</string>
    <string name="Addmember">添加成员</string>
    <string name="name_name">姓名</string>
    <string name="phonenumber">手机号</string>
    <string name="position">职位</string>
    <string name="department">部门</string>
    <string name="Jobnumber">工号</string>
    <string name="Verificationcodelogin">验证码登录</string>
    <string name="Passlogin">账号密码登录</string>
    <string name="Mobilenumberlogin">手机号登录</string>
    <string name="Accountregistration">账号注册</string>
    <string name="Getverificationcode">获取验证码</string>
    <string name="VerificationCode">验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="add_friends">添加商友</string>
    <string name="Logout">退出登录</string>
    <string name="Saveasaddressbook">存为通讯录</string>
    <string name="Sharingnamecard">分享名片</string>
    <string name="sendmsg">发消息</string>
    <string name="Enterpriseinformation">企业信息</string>
    <string name="Upperreaches">上游客户</string>
    <string name="downstream">下游客户</string>
    <string name="Platformclient">平台客户</string>
    <string name="Addcustomer">添加客户</string>
    <string name="Forgetpassword">忘记密码</string>

</resources>
