<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.c.ctgapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.c.ctgapp.ui.news.NewsFragment"
        android:label="@string/title_msg"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_work"
        android:name="com.c.ctgapp.ui.work.WorkFragmnet"
        android:label="@string/title_work"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.c.ctgapp.ui.transaction.TransactionFragmnet"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.c.ctgapp.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

</navigation>
