<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/line"
    android:id="@+id/mDrawer_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <include
            android:layout_alignParentTop="true"
            android:id="@+id/layout"
            layout="@layout/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/search_lin"
            android:background="@color/white"
            android:layout_below="@id/layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.c.ctgapp.Tools.ClearEditText
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:textColorHint="@color/hint_search"
                android:textSize="12sp"
                android:paddingLeft="20dp"
                android:hint="输入关键字搜索"
                android:textColor="@color/tv5"
                android:layout_margin="10dp"
                android:background="@drawable/seach_selector"
                android:id="@+id/search_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ImageView
                android:id="@+id/screen_iv"
                android:padding="13dp"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/screen"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/search_lin"
            android:id="@+id/tops"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" />
        <com.google.android.material.tabs.TabLayout
            android:layout_below="@id/tops"
            android:background="@color/white"
            app:tabIndicatorColor="@color/tab_color"
            app:tabIndicatorFullWidth="false"
            android:id="@+id/tab_layout"
            app:tabMode="scrollable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_below="@id/tab_layout"
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/line"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" />
        <com.c.ctgapp.Tools.NoScrollViewPager
            android:layout_below="@id/top"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </com.c.ctgapp.Tools.NoScrollViewPager>
    </RelativeLayout>

    </FrameLayout>
    <LinearLayout
        android:clickable="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close_dr"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/close_dr"
            />

        <TextView
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Selectivegrouping"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="11dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Defaultgrouping"
            />
        <com.c.ctgapp.Tools.FNRadioGroup
            android:layout_marginTop="20dp"
            app:childMarginLeft="15dp"
            app:childMarginBottom="5dp"
            app:childMarginRight="10dp"
            app:childMarginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <CheckBox
                android:id="@+id/RB_Distributor"
                android:gravity="center"
                android:text="@string/Distributor"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />
            <CheckBox
                android:id="@+id/RB_RepairDepot"
                android:gravity="center"
                android:text="@string/RepairDepot"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />
            <CheckBox
                android:id="@+id/RB_Manufacturer"
                android:gravity="center"
                android:text="@string/Manufacturer"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />
            <CheckBox
                android:id="@+id/RB_logistics"
                android:gravity="center"
                android:text="@string/logistics"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />
            <CheckBox
                android:id="@+id/RB_Insurancecompany"
                android:gravity="center"
                android:text="@string/Insurancecompany"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />

            <CheckBox
                android:id="@+id/RB_Cardemolitionplant"
                android:gravity="center"
                android:text="@string/Cardemolitionplant"
                android:textColor="@drawable/rd_text_color_select"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:layout_width="73dp"
                android:layout_height="27dp"
                />

        </com.c.ctgapp.Tools.FNRadioGroup>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="11dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Usergrouping"
            />
        <com.c.ctgapp.Tools.FNRadioGroup
            android:layout_marginTop="20dp"
            app:childMarginLeft="15dp"
            app:childMarginBottom="5dp"
            app:childMarginRight="10dp"
            app:childMarginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">


            <LinearLayout
                android:id="@+id/Groupsetting_lin"
                android:background="@drawable/groupsetting_select"
                android:gravity="center"
                android:layout_width="73dp"
                android:layout_height="27dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/groupsetting"
                    />
            </LinearLayout>


        </com.c.ctgapp.Tools.FNRadioGroup>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>